--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,26 @@ body {
     margin: 0;
 }
 
+#clerk-name {
+    /* positioning/size */
+    position: fixed;
+    top: 58%;
+    left: 10%;
+    padding: 0.25em 0.75em 0.25em 0.75em;
+
+    /* visual properties */
+    color: whitesmoke;
+    background-color: black;
+    border-radius: 25px;
+    border-color: darkgray;
+    border-style: solid;
+    border-width: 5px;
+    display: none;
+
+    /* animation */
+    animation-duration: 0.5s;
+}
+
 .dialogue-box {
     /* positioning/size */
     position: fixed;
