--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,22 @@ body {
     margin: 0;
 }
 
+#next-prompt {
+    /* positioning/size */
+    position: inherit;
+    display: inherit;
+
+    /* visual properties */
+    font-size: 100px;
+    color:darkgray;
+
+    /* animation */
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-duration: 0.33s;
+    animation-name: dialogue-next;
+}
+
 #clerk-name {
     /* positioning/size */
     position: fixed;
@@ -16,7 +32,7 @@ body {
     border-color: darkgray;
     border-style: solid;
     border-width: 5px;
-    display: none;
+    display: inherit;
 
     /* animation */
     animation-duration: 0.5s;
@@ -34,7 +50,6 @@ body {
 
     /* centering dialogue text */
     display: none;
-    /* display: flex; -> Display when shown */
     align-items: center;
     justify-content: center;
 
