--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 #next-prompt {
     /* positioning/size */
     position: inherit;
-    display: inherit;
+    display: none;
 
     /* visual properties */
     font-size: 100px;
