--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body {
 #dialogue-options {
     /* positioning / size */
     position: fixed;
-    display: none;
+    display: flex;
     flex-direction: column;
     top: 5%;
     left: 5%;
@@ -98,4 +98,15 @@ body {
     border-color: darkgray;
     border-width: 5px;
     border-radius: 25px;
+}
+
+.option:hover {
+    background-color: lightgray;
+    border-color: gray;
+    border-width: 5px;
+}
+
+.option:active {
+    background-color: darkgray;
+    border-color: lightgray;
 }
