--- a/css/dialogue.css
+++ b/css/dialogue.css
@@ -110,6 +110,15 @@
     border-color: white
 }
 
+#background-dim {
+    display: none;
+    visibility: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 @media only screen and (max-width: 620px) {
     #dialogue-options {
         right: 3.5%;
@@ -117,6 +126,10 @@
 
     .option {
         font-size: 23px;
+    }
+
+    #background-dim {
+        display: block;
     }
 }
 
