--- a/css/gui.css
+++ b/css/gui.css
@@ -14,7 +14,7 @@
 }
 
 #help-button {
-    font-family: "Pixelify Sans", sans-serif;
+    font-family: "Pixelify Sans", "sans-serif";
     font-weight: bolder;
     font-size: 60px;
     color: white;
@@ -59,12 +59,10 @@
 
     /* Font settings */
     text-align: center;
-    font-size: 25px;
-    font-family: "Pixelify Sans", sans-serif;
+    font-size: 30px;
 
     /* Visuals */
     user-select: none;
-    font-family: "Pixelify Sans", sans-serif;
     color: whitesmoke;
     background-color: rgb(2, 3, 31);
     border-style: solid;
@@ -85,7 +83,6 @@
 
     /* Font settings */
     color: whitesmoke;
-    font-family: "Pixelify Sans", sans-serif;
     font-weight: bold;
     font-size: 30px;
     letter-spacing: 0.125em;
@@ -111,17 +108,15 @@
 
     /* Positioning */
     top: 18vh;
-    right: 10.5vw;
+    right: 11vw;
 
     /* Font settings */
     text-align: center;
-    font-size: 16px;
-    font-family: "Pixelify Sans", sans-serif;
+    font-size: 19px;
 
     /* Visuals */
     border-radius: 100px;
     user-select: none;
-    font-family: "Pixelify Sans", sans-serif;
     color: rgb(2, 3, 31);
     background-color: whitesmoke;
 
@@ -159,13 +154,13 @@
     /* Scroll bar visuals */
     overflow-y: scroll;
     overflow-x: hidden;
-    scrollbar-color: rgb(2, 25, 69) rgb(2, 3, 31);
+    scrollbar-color: rgb(22, 66, 148) rgb(2, 3, 31);
     scrollbar-width: thin;
     scroll-behavior: smooth;
 }
 
 .help-section {
-    font-size: 30px;
+    font-size: 42px;
 }
 
 .help-text-icon {
@@ -187,7 +182,7 @@
 
     #hint-box {
         right: 58vw;
-        font-size: 13px;
+        font-size: 19px;
     }
 }
 
