--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
+/* Global CSS */
 body {
     margin: 0;
+    font-family: "ByteBounce", "sans-serif";
+}
+
+button {
+    font-family: "ByteBounce", "sans-serif";
+}
+
+/* Imports */
+@font-face {
+    font-family: "Pixelify Sans";
+    src: url("/fonts/PixelifySans.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ByteBounce";
+    src: url("/fonts/ByteBounce.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
 }
