--- a/css/projects.css
+++ b/css/projects.css
@@ -32,7 +32,7 @@
 
 /* Container elements */
 #project-name {
-    font-size: 7.5vh;
+    font-size: 6vh;
     letter-spacing: 0.5vw;
     margin: 0;
     text-align: center;
@@ -101,10 +101,10 @@
 }
 
 #project-description {
-    padding-left: 2%;
-    padding-right: 2%;
-    text-align: justify;
-    font-size: 25px;
+    padding-left: 3%;
+    padding-right: 3%;
+    text-align: left;
+    font-size: 20px;
     white-space: pre-wrap;
 
     /* Scroll bar visuals */
