--- a/css/gui.css
+++ b/css/gui.css
@@ -107,12 +107,13 @@
     padding-right: 1.5em;
 
     /* Positioning */
-    top: 18vh;
-    right: 11vw;
+    transform: translateX(-39%);
+    top: 140%;
+    left: 0%;
 
     /* Font settings */
     text-align: center;
-    font-size: 15px;
+    font-size: 18px;
 
     /* Visuals */
     border-radius: 100px;
@@ -181,8 +182,9 @@
     }
 
     #hint-box {
+        transform: none;
         right: 58vw;
-        font-size: 19px;
+        font-size: 14px;
     }
 }
 
